[package]
name = "bleu"
version = "0.0.2"
authors = ["Jack Hanslope <code@jackhanslope.com>"]
license = "MIT OR Apache-2.0"
description = "bleu is a friendly bluetooth cli written in rust"
readme = "README.md"
homepage = "https://github.com/jackhanslope/bleu"
repository = "https://github.com/jackhanslope/bleu"
keywords = ["cli", "bluetooth"]
categories = ["command-line-utilities"]
edition = "2018"

[dependencies]
blurz = "0.4.0"
clap = "2.33.1"
serde_json = "1.0.53"
bimap = { version = "0.4.0", features = [ "serde" ] }
dirs = "2.0.2"
